<?xml version="1.0" encoding="utf-8"?>
<!--
I'm still getting used to styling and themes, so
code isn't the most organized/optimal, but I'm
slowly learning :)
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aggrogahu.lgmproject0.MainActivity"
    tools:showIn="@layout/activity_main">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_horizontal">

    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/UI_Title"
        android:id="@+id/textView" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj1Title"
            android:id="@+id/button"/>

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj2Title"
            android:id="@+id/button2" />

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj3Title"
            android:id="@+id/button3"/>

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj4Title"
            android:id="@+id/button4"/>

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj5Title"
            android:id="@+id/button5"/>

        <Button
            style="@style/AppTheme.Buttons"
            android:text="@string/UI_Proj6Title"
            android:id="@+id/button6"/>
    </TableLayout>

</LinearLayout>
</ScrollView>